--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
             <div class="carousel-track-container">
                 <div class="carousel-track">
                     <div class="carousel-item">
-                        <img src="./Goldman Sachs job sim.png" alt="Certificate 1">
+                        <img src="Goldman Sachs job sim.png" alt="Certificate 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="./ML&DS.png" alt="Certificate 2">
+                        <img src="ML&DS.png" alt="Certificate 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="./hp agility project management.png" alt="Certificate 3">
+                        <img src="hp agility project management.png" alt="Certificate 3">
                     </div>
                 </div>
             </div>
