--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="colorful">a FullStack Web Developer</span><br>
 
             <p class="desc">A graduating FullStack Web Developer ready to showcase my skills and learn more.</p>
-            <a href="RidhumMohan_Resume_WebDevelopment_KIIT.pdf">
+            <a href="./RidhumMohan_Resume_WebDevelopment_KIIT.pdf">
                 <button class="CV">Download my CV</button>
             </a>
         </div>
