--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                     <div class="carousel-item">
                         <img src="hp agility project management.png" alt="Certificate 3">
                     </div>
+                    <div class="carousel-item">
+                        <img src="microsoft student intern.png" alt="Certificate 4">
+                    </div>
                 </div>
             </div>
             <!-- Carousel Navigation -->
