--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     Whether you are a company, an independent professional, or even just curious about web development,
                     do not hesitate to contact me. You can contact me by email or by the form below. I will answer you as soon as possible!
                 </p>
-                <a href="mailto:contact@franckwebpro.com" class="email-link">ridhummohan@gmail.com</a>
+                <a href="mailto:ridhummohan@gmail.com" class="email-link">ridhummohan@gmail.com</a>
                 <p class="location">Location: Remote only</p>
             </div>
     
